# 42-Python-Modules

./: .gitignore  .gitmodules
42-Python-Module-00/ex1/: ft_plot_area.py
42-Python-Module-00/ex2/: ft_harvest_total.py
42-Python-Module-00/ex3/: ft_plant_age.py
42-Python-Module-00/ex4/: ft_water_reminder.py
42-Python-Module-00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
42-Python-Module-00/ex6/: ft_garden_summary.py
42-Python-Module-00/ex7/: ft_seed_inventory.py
42-Python-Module-01/ex0/: ft_garden_intro.py
42-Python-Module-01/ex1/: ft_garden_data.py
42-Python-Module-01/ex2/: ft_plant_growth.py
42-Python-Module-01/ex3/: ft_plant_factory.py
42-Python-Module-01/ex4/: ft_garden_security.py
42-Python-Module-01/ex5/: ft_plant_types.py
42-Python-Module-01/ex6/: ft_garden_analytics.py
42-Python-Module-02/ex0/: ft_first_exception.py
42-Python-Module-02/ex1/: ft_different_errors.py
42-Python-Module-02/ex2/: ft_custom_errors.py
42-Python-Module-02/ex3/: ft_finally_block.py
42-Python-Module-02/ex4/: ft_raise_errors.py
42-Python-Module-02/ex5/: ft_garden_management.py
42-Python-Module-03/ex0/: ft_command_quest.py
42-Python-Module-03/ex1/: ft_score_analytics.py
42-Python-Module-03/ex2/: ft_coordinate_system.py
42-Python-Module-03/ex3/: ft_achievement_tracker.py
42-Python-Module-03/ex4/: ft_inventory_system.py
42-Python-Module-06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
42-Python-Module-07/ex0/: main.py  (+1 more)
42-Python-Module-08/ex1/: loading.py  pyproject.toml
(+43 files in other folders)
