[tool.poetry]
name = "loading"
version = "1.0.0"
description = "Data analysis tool for the resistance"
authors = ["jzorreta <jzorreta@student.42lisboa.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.3.3"
numpy = "2.2.6"
matplotlib = "^3.8.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"